y.output
   0  $accept : programa $end

   1  $$1 :

   2  programa : BEGINP declaracoes $$1 MIDDLE instrucoes ENDP

   3  declaracoes : declaracao
   4              | declaracoes declaracao

   5  $$2 :

   6  declaracao : tipo $$2 variaveis ';'

   7  $$3 :

   8  declaracao : tipo '(' num ')' $$3 variaveis ';'

   9  tipo : INT
  10       | ARRAY

  11  variaveis : variavel
  12            | variaveis ',' variavel

  13  variavel : pal

  14  instrucoes : instrucao ';'
  15             | instrucoes instrucao ';'

  16  instrucao : atribuicao
  17            | condicao
  18            | ciclo
  19            | READ '(' pal ')'

  20  $$4 :

  21  instrucao : READ '(' pal $$4 '(' expressao ')' ')'
  22            | WRITE '(' expressao ')'

  23  atribuicao : pal '=' expressao

  24  $$5 :

  25  atribuicao : pal $$5 '(' expressao ')' '=' expressao

  26  cond : expressao
  27       | expressao OPR expressao

  28  expressao : termo
  29            | expressao OPA termo

  30  termo : fator
  31        | termo OPM fator

  32  fator : pal

  33  $$6 :

  34  fator : pal $$6 '(' expressao ')'
  35        | num
  36        | '(' cond ')'

  37  $$7 :

  38  condicao : IF '(' cond ')' $$7 instrucoes senao

  39  senao : ENDIF

  40  $$8 :

  41  senao : ELSE $$8 instrucoes ENDIF

  42  $$9 :

  43  $$10 :

  44  ciclo : WHILE $$9 '(' cond ')' $$10 instrucoes ENDWHILE

state 0
	$accept : . programa $end  (0)

	BEGINP  shift 1
	.  error

	programa  goto 2


state 1
	programa : BEGINP . declaracoes $$1 MIDDLE instrucoes ENDP  (2)

	INT  shift 3
	ARRAY  shift 4
	.  error

	declaracoes  goto 5
	declaracao  goto 6
	tipo  goto 7


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	tipo : INT .  (9)

	.  reduce 9


state 4
	tipo : ARRAY .  (10)

	.  reduce 10


state 5
	programa : BEGINP declaracoes . $$1 MIDDLE instrucoes ENDP  (2)
	declaracoes : declaracoes . declaracao  (4)
	$$1 : .  (1)

	INT  shift 3
	ARRAY  shift 4
	MIDDLE  reduce 1

	$$1  goto 8
	declaracao  goto 9
	tipo  goto 7


state 6
	declaracoes : declaracao .  (3)

	.  reduce 3


state 7
	declaracao : tipo . $$2 variaveis ';'  (6)
	declaracao : tipo . '(' num ')' $$3 variaveis ';'  (8)
	$$2 : .  (5)

	'('  shift 10
	pal  reduce 5

	$$2  goto 11


state 8
	programa : BEGINP declaracoes $$1 . MIDDLE instrucoes ENDP  (2)

	MIDDLE  shift 12
	.  error


state 9
	declaracoes : declaracoes declaracao .  (4)

	.  reduce 4


state 10
	declaracao : tipo '(' . num ')' $$3 variaveis ';'  (8)

	num  shift 13
	.  error


state 11
	declaracao : tipo $$2 . variaveis ';'  (6)

	pal  shift 14
	.  error

	variaveis  goto 15
	variavel  goto 16


state 12
	programa : BEGINP declaracoes $$1 MIDDLE . instrucoes ENDP  (2)

	pal  shift 17
	IF  shift 18
	WHILE  shift 19
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucoes  goto 22
	instrucao  goto 23
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 13
	declaracao : tipo '(' num . ')' $$3 variaveis ';'  (8)

	')'  shift 27
	.  error


state 14
	variavel : pal .  (13)

	.  reduce 13


state 15
	declaracao : tipo $$2 variaveis . ';'  (6)
	variaveis : variaveis . ',' variavel  (12)

	';'  shift 28
	','  shift 29
	.  error


state 16
	variaveis : variavel .  (11)

	.  reduce 11


state 17
	atribuicao : pal . '=' expressao  (23)
	atribuicao : pal . $$5 '(' expressao ')' '=' expressao  (25)
	$$5 : .  (24)

	'='  shift 30
	'('  reduce 24

	$$5  goto 31


state 18
	condicao : IF . '(' cond ')' $$7 instrucoes senao  (38)

	'('  shift 32
	.  error


state 19
	ciclo : WHILE . $$9 '(' cond ')' $$10 instrucoes ENDWHILE  (44)
	$$9 : .  (42)

	.  reduce 42

	$$9  goto 33


state 20
	instrucao : WRITE . '(' expressao ')'  (22)

	'('  shift 34
	.  error


state 21
	instrucao : READ . '(' pal ')'  (19)
	instrucao : READ . '(' pal $$4 '(' expressao ')' ')'  (21)

	'('  shift 35
	.  error


state 22
	programa : BEGINP declaracoes $$1 MIDDLE instrucoes . ENDP  (2)
	instrucoes : instrucoes . instrucao ';'  (15)

	pal  shift 17
	ENDP  shift 36
	IF  shift 18
	WHILE  shift 19
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucao  goto 37
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 23
	instrucoes : instrucao . ';'  (14)

	';'  shift 38
	.  error


state 24
	instrucao : atribuicao .  (16)

	.  reduce 16


state 25
	instrucao : condicao .  (17)

	.  reduce 17


state 26
	instrucao : ciclo .  (18)

	.  reduce 18


state 27
	declaracao : tipo '(' num ')' . $$3 variaveis ';'  (8)
	$$3 : .  (7)

	.  reduce 7

	$$3  goto 39


state 28
	declaracao : tipo $$2 variaveis ';' .  (6)

	.  reduce 6


state 29
	variaveis : variaveis ',' . variavel  (12)

	pal  shift 14
	.  error

	variavel  goto 40


state 30
	atribuicao : pal '=' . expressao  (23)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 44
	termo  goto 45
	fator  goto 46


state 31
	atribuicao : pal $$5 . '(' expressao ')' '=' expressao  (25)

	'('  shift 47
	.  error


state 32
	condicao : IF '(' . cond ')' $$7 instrucoes senao  (38)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 48
	cond  goto 49
	termo  goto 45
	fator  goto 46


state 33
	ciclo : WHILE $$9 . '(' cond ')' $$10 instrucoes ENDWHILE  (44)

	'('  shift 50
	.  error


state 34
	instrucao : WRITE '(' . expressao ')'  (22)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 51
	termo  goto 45
	fator  goto 46


state 35
	instrucao : READ '(' . pal ')'  (19)
	instrucao : READ '(' . pal $$4 '(' expressao ')' ')'  (21)

	pal  shift 52
	.  error


state 36
	programa : BEGINP declaracoes $$1 MIDDLE instrucoes ENDP .  (2)

	.  reduce 2


state 37
	instrucoes : instrucoes instrucao . ';'  (15)

	';'  shift 53
	.  error


state 38
	instrucoes : instrucao ';' .  (14)

	.  reduce 14


state 39
	declaracao : tipo '(' num ')' $$3 . variaveis ';'  (8)

	pal  shift 14
	.  error

	variaveis  goto 54
	variavel  goto 16


state 40
	variaveis : variaveis ',' variavel .  (12)

	.  reduce 12


state 41
	fator : num .  (35)

	.  reduce 35


state 42
	fator : pal .  (32)
	fator : pal . $$6 '(' expressao ')'  (34)
	$$6 : .  (33)

	OPM  reduce 32
	OPA  reduce 32
	OPR  reduce 32
	';'  reduce 32
	'('  reduce 33
	')'  reduce 32

	$$6  goto 55


state 43
	fator : '(' . cond ')'  (36)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 48
	cond  goto 56
	termo  goto 45
	fator  goto 46


state 44
	atribuicao : pal '=' expressao .  (23)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	';'  reduce 23


state 45
	expressao : termo .  (28)
	termo : termo . OPM fator  (31)

	OPM  shift 58
	OPA  reduce 28
	OPR  reduce 28
	';'  reduce 28
	')'  reduce 28


state 46
	termo : fator .  (30)

	.  reduce 30


state 47
	atribuicao : pal $$5 '(' . expressao ')' '=' expressao  (25)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 59
	termo  goto 45
	fator  goto 46


state 48
	cond : expressao .  (26)
	cond : expressao . OPR expressao  (27)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	OPR  shift 60
	')'  reduce 26


state 49
	condicao : IF '(' cond . ')' $$7 instrucoes senao  (38)

	')'  shift 61
	.  error


state 50
	ciclo : WHILE $$9 '(' . cond ')' $$10 instrucoes ENDWHILE  (44)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 48
	cond  goto 62
	termo  goto 45
	fator  goto 46


state 51
	instrucao : WRITE '(' expressao . ')'  (22)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	')'  shift 63
	.  error


state 52
	instrucao : READ '(' pal . ')'  (19)
	instrucao : READ '(' pal . $$4 '(' expressao ')' ')'  (21)
	$$4 : .  (20)

	')'  shift 64
	'('  reduce 20

	$$4  goto 65


state 53
	instrucoes : instrucoes instrucao ';' .  (15)

	.  reduce 15


state 54
	declaracao : tipo '(' num ')' $$3 variaveis . ';'  (8)
	variaveis : variaveis . ',' variavel  (12)

	';'  shift 66
	','  shift 29
	.  error


state 55
	fator : pal $$6 . '(' expressao ')'  (34)

	'('  shift 67
	.  error


state 56
	fator : '(' cond . ')'  (36)

	')'  shift 68
	.  error


state 57
	expressao : expressao OPA . termo  (29)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	termo  goto 69
	fator  goto 46


state 58
	termo : termo OPM . fator  (31)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	fator  goto 70


state 59
	atribuicao : pal $$5 '(' expressao . ')' '=' expressao  (25)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	')'  shift 71
	.  error


state 60
	cond : expressao OPR . expressao  (27)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 72
	termo  goto 45
	fator  goto 46


state 61
	condicao : IF '(' cond ')' . $$7 instrucoes senao  (38)
	$$7 : .  (37)

	.  reduce 37

	$$7  goto 73


state 62
	ciclo : WHILE $$9 '(' cond . ')' $$10 instrucoes ENDWHILE  (44)

	')'  shift 74
	.  error


state 63
	instrucao : WRITE '(' expressao ')' .  (22)

	.  reduce 22


state 64
	instrucao : READ '(' pal ')' .  (19)

	.  reduce 19


state 65
	instrucao : READ '(' pal $$4 . '(' expressao ')' ')'  (21)

	'('  shift 75
	.  error


state 66
	declaracao : tipo '(' num ')' $$3 variaveis ';' .  (8)

	.  reduce 8


state 67
	fator : pal $$6 '(' . expressao ')'  (34)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 76
	termo  goto 45
	fator  goto 46


state 68
	fator : '(' cond ')' .  (36)

	.  reduce 36


state 69
	expressao : expressao OPA termo .  (29)
	termo : termo . OPM fator  (31)

	OPM  shift 58
	OPA  reduce 29
	OPR  reduce 29
	';'  reduce 29
	')'  reduce 29


state 70
	termo : termo OPM fator .  (31)

	.  reduce 31


state 71
	atribuicao : pal $$5 '(' expressao ')' . '=' expressao  (25)

	'='  shift 77
	.  error


state 72
	cond : expressao OPR expressao .  (27)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	')'  reduce 27


state 73
	condicao : IF '(' cond ')' $$7 . instrucoes senao  (38)

	pal  shift 17
	IF  shift 18
	WHILE  shift 19
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucoes  goto 78
	instrucao  goto 23
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 74
	ciclo : WHILE $$9 '(' cond ')' . $$10 instrucoes ENDWHILE  (44)
	$$10 : .  (43)

	.  reduce 43

	$$10  goto 79


state 75
	instrucao : READ '(' pal $$4 '(' . expressao ')' ')'  (21)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 80
	termo  goto 45
	fator  goto 46


state 76
	expressao : expressao . OPA termo  (29)
	fator : pal $$6 '(' expressao . ')'  (34)

	OPA  shift 57
	')'  shift 81
	.  error


state 77
	atribuicao : pal $$5 '(' expressao ')' '=' . expressao  (25)

	num  shift 41
	pal  shift 42
	'('  shift 43
	.  error

	expressao  goto 82
	termo  goto 45
	fator  goto 46


state 78
	instrucoes : instrucoes . instrucao ';'  (15)
	condicao : IF '(' cond ')' $$7 instrucoes . senao  (38)

	pal  shift 17
	IF  shift 18
	ENDIF  shift 83
	WHILE  shift 19
	ELSE  shift 84
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucao  goto 37
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26
	senao  goto 85


state 79
	ciclo : WHILE $$9 '(' cond ')' $$10 . instrucoes ENDWHILE  (44)

	pal  shift 17
	IF  shift 18
	WHILE  shift 19
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucoes  goto 86
	instrucao  goto 23
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 80
	instrucao : READ '(' pal $$4 '(' expressao . ')' ')'  (21)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	')'  shift 87
	.  error


state 81
	fator : pal $$6 '(' expressao ')' .  (34)

	.  reduce 34


state 82
	atribuicao : pal $$5 '(' expressao ')' '=' expressao .  (25)
	expressao : expressao . OPA termo  (29)

	OPA  shift 57
	';'  reduce 25


state 83
	senao : ENDIF .  (39)

	.  reduce 39


state 84
	senao : ELSE . $$8 instrucoes ENDIF  (41)
	$$8 : .  (40)

	.  reduce 40

	$$8  goto 88


state 85
	condicao : IF '(' cond ')' $$7 instrucoes senao .  (38)

	.  reduce 38


state 86
	instrucoes : instrucoes . instrucao ';'  (15)
	ciclo : WHILE $$9 '(' cond ')' $$10 instrucoes . ENDWHILE  (44)

	pal  shift 17
	IF  shift 18
	WHILE  shift 19
	ENDWHILE  shift 89
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucao  goto 37
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 87
	instrucao : READ '(' pal $$4 '(' expressao ')' . ')'  (21)

	')'  shift 90
	.  error


state 88
	senao : ELSE $$8 . instrucoes ENDIF  (41)

	pal  shift 17
	IF  shift 18
	WHILE  shift 19
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucoes  goto 91
	instrucao  goto 23
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 89
	ciclo : WHILE $$9 '(' cond ')' $$10 instrucoes ENDWHILE .  (44)

	.  reduce 44


state 90
	instrucao : READ '(' pal $$4 '(' expressao ')' ')' .  (21)

	.  reduce 21


state 91
	instrucoes : instrucoes . instrucao ';'  (15)
	senao : ELSE $$8 instrucoes . ENDIF  (41)

	pal  shift 17
	IF  shift 18
	ENDIF  shift 92
	WHILE  shift 19
	WRITE  shift 20
	READ  shift 21
	.  error

	instrucao  goto 37
	atribuicao  goto 24
	condicao  goto 25
	ciclo  goto 26


state 92
	senao : ELSE $$8 instrucoes ENDIF .  (41)

	.  reduce 41


24 terminals, 27 nonterminals
45 grammar rules, 93 states
